fix: components overlaps one other

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border-top: 1px solid black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   &__wrapper {
     font-size: small;
     display: flex;
@@ -31,7 +32,7 @@
       right: 25px;
       height: 25px;
       width: 67px;
-      background: url("../assets/images/rs_school_logo.svg");
+      background: url('../assets/images/rs_school_logo.svg');
       background-size: cover;
       transition: transform 0.3s ease;
       &:hover {
