--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,6 +1,4 @@
 .header {
-  position: absolute;
-  top: 0;
   width: 100%;
   height: 55px;
   display: flex;
