--- a/src/Components/Table/table.scss
+++ b/src/Components/Table/table.scss
@@ -1,5 +1,4 @@
 .table--wrapper {
-  top: 50px;
   width: 300px;
   table {
     th,
